--- a/index.html
+++ b/index.html
@@ -35,6 +35,16 @@
 
 <body>
 
+    <header>
+    <h1>EcoWorld Collaboration Project</h1>
+    <nav>
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+        </ul>
+    </nav>
+</header>
+
     <div class="container">
         <section>
             <h2>EcoWorld โครงการเพื่อโลกสีเขียว</h2>
