--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
 </head>
 
 <body>
+    <div style="background-color: red; color: white; padding: 20px; text-align: center;">
+    🔥 โปรโมชั่นลดโลกร้อน 50% วันนี้วันเดียว!
+</div>
 
     <div class="container">
         <section>
